--- a/my-summer-ending.html
+++ b/my-summer-ending.html
@@ -41,13 +41,12 @@
         <br>
         <br>　　　　　　監督・脚本・その他全部
         <br>
-        <br>　　 高校3年で全く勉強していない加藤巧人
+        <br>　　 高校3年で全く勉強していないとあるN校生
       </p>
   </div>
   <img src="./ending/black.png" alt="" class="black" id="black">
   <p id="p" class="p"></p>
   <p id="p2" class="p2">深淵を覗くとき、深淵もまたこちらをのぞいている。<br>気をつけなければならない、<br>あなたも知らぬ間に佐藤カズマになっているのかもしれない</p>
-  <a href="./my-summer2.html"><p id="link"></p></a>
   <img src="./ending/happyou.png" alt="" class="ending-1" id="ending-1">
   <img src="./ending/human.png" alt="" class="ending-2" id="ending-2">
   <img src="./ending/school.png" alt="" class="ending-3" id="ending-3">
