--- a/my-summer-opening.html
+++ b/my-summer-opening.html
@@ -9,6 +9,21 @@
 </head>
 <body>
 
+  <div id="kagawa-question" class="kagawa-question">
+  <h1>あなたの主食はうどんですか？</h1>
+  <button id="buttonA" class="buttonA">はい</button>
+  <button id="buttonB" class="buttonB">いいえ</button>
+  </div>
+
+  <div id="kagawa-ng" class="kagawa-ng">
+    <p>当サイトは「ネット・ゲーム依存症対策条例」を受け、香川県民の皆様のご利用をお断りさせていただいております。</p>
+    <div class="kagawa-button">
+    <button id="buttonC" class="buttonC k-button">香川県民なので了承する</button>
+    <button id="buttonD" class="buttonD k-button">やっぱりうどんなんて食べません。むしろ嫌いです</button>
+    <button id="buttonE" class="buttonE k-button">香川？何それ美味しいの？</button>
+    <button id="buttonF" class="buttonF k-button">あんなうどんくらいしか魅力のない県民だと言われるなんて心外だ！</button>
+  </div></div>
+
   <div id="opening" class="opening">
   <img src="./opening/wood_kanban2.png" alt="opening1-A" class="opening1-A" id="opening1-A">
   <img src="./opening/test2.png" alt="opening1-B" class="opening1-B" id="opening1-B">
